fix(www): prerender index page, to prevent crash

--- a/www/src/pages/index.mdx
+++ b/www/src/pages/index.mdx
@@ -1,6 +1,9 @@
 ---
 layout: ../layouts/PageLayout.astro
 ---
+
+export const prerender = true;
+
 # .projectrc
 
  Since you are here, you are probably wondering why and what this <span class="rounded bg-gray-200 dark:bg-active p-0.5">.projectrc</span> is.
