fix(www): add title and description

--- a/www/src/pages/index.mdx
+++ b/www/src/pages/index.mdx
@@ -1,5 +1,7 @@
 ---
 layout: ../layouts/PageLayout.astro
+title: .projectrc
+description: A file that are used by my website to generate a list of projects.
 ---
 
 export const prerender = true;
